Create `stellar.configuration.toml` (see details)
- Add entries for all configuration extensions to the BOM

- Create `stellar.configuration.toml` using TomlJ (under Apache-2.0)
  for parsing (with passing tests)

- Extract shared testing utilities to `stellar.configuration.testing`

Signed-off-by: Mahied Maruf <contact@mechite.com>